Reformatting footer markup, moving header div outside off-canvas-wrap, fixing developing ribbon,adding scroll and menu checks to theme-homepage, switch other pages to off canvas move, section front/article need attention

--- a/assets/css/scss/parts/_post-meta.scss
+++ b/assets/css/scss/parts/_post-meta.scss
@@ -37,7 +37,7 @@
 				border-top: 11px solid $social_grey;
 				border-right: 12px solid transparent;
 				border-bottom: 11px solid $social_grey;
-				right: 31px;
+				right: 32px;
 			}
 
 			
